@@ -876,3 +876,5 @@ O quiza que salte al menu con la linea de opcion seleccionada donde corresponde
 
 
 -comentar desensamblado copion9
+
+-soportar cartuchos msx de 48kb (Trucho Demo)
